Fixes navitem spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,6 +7,7 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-container-width-xl: var(--ifm-container-width);
+  --ifm-navbar-item-padding-horizontal: 1rem;
 }
 
 .docusaurus-highlight-code-line {
